# q2_2025_chat_project_team_1

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  setup_chat_db.sh
client/: CMakeLists.txt
client-doc/html/: INDEX.html  annotated.html  annotated_dup.js  application_8h.html  application_8h_source.html  chat__client_8h.html  chat__client_8h.js  chat__client_8h_source.html  class_application-members.html  class_application.html  class_application.js  class_chat_client-members.html  class_chat_client.html  class_chat_client.js  classdomain_1_1_message_handler-members.html  classdomain_1_1_message_handler.html  classdomain_1_1_message_handler.js  classes.html  classgui_1_1_create_room_frame-members.html  classgui_1_1_create_room_frame.html  classgui_1_1_create_room_frame.js  classgui_1_1_login_frame-members.html  classgui_1_1_login_frame.html  classgui_1_1_login_frame.js  classgui_1_1_main_frame-members.html  classgui_1_1_main_frame.html  classgui_1_1_main_frame.js  classgui_1_1_rooms_frame-members.html  classgui_1_1_rooms_frame.html  classgui_1_1_rooms_frame.js  classgui_1_1_rooms_users_frame-members.html  classgui_1_1_rooms_users_frame.html  classgui_1_1_rooms_users_frame.js  classgui_1_1_settings_frame-members.html  classgui_1_1_settings_frame.html  classgui_1_1_settings_frame.js  classtransfer_1_1_client_interface-members.html  classtransfer_1_1_client_interface.html  classtransfer_1_1_client_interface.js  classtransfer_1_1_web_socket_client-members.html  (+72 more)
client-doc/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  (+24 more)
client/include/: application.h  chat_client.h  client_interface.h  command_handler.h  create_room_frame.h  domain.h  login_frame.h  main_frame.h  message_handler.h  messages_handler.h  pausable_thread.h  query_handler.h  rooms_frame.h  rooms_users_frame.h  server_loader.h  settings_frame.h  tcp_client.h  transfer_interface.h  websocket_client.h
client/src/: chat_client.cpp  command_handler.cpp  create_room_frame.cpp  domain.cpp  login_frame.cpp  main.cpp  main_frame.cpp  message_handler.cpp  messages_handler.cpp  pausable_thread.cpp  query_handler.cpp  rooms_frame.cpp  rooms_users_frame.cpp  server_loader.cpp  settings_frame.cpp  tcp_client.cpp  websocket_client.cpp
client/tests/src/: main.cpp  message_handler_test.cpp  websocket_client_test.cpp
data/: config.json  loaderserv.conf  servers.json
doc/: README_DOCKER.md  README_IRC.md  README_client.md  README_db_wrapper.md  README_irc_chat_db.md  ReadMe_IRC.md  ReadMe_ServerConfig.md  irc_er_diagram.puml  irc_server_diagram.puml
domain/: CMakeLists.txt
domain/include/: const.h  const_api.h  const_json_fields.h  const_response_msgs.h  guardlock.h  password_hasher.h  service.h  tokenizer.h
domain/src/: const.cpp  guardlock.cpp  password_hasher.cpp  service.cpp  tokenizer.cpp  user_foo.cpp
server/: CMakeLists.txt
server-doc/html/: _u_m_l-_diagram_of_classes.html  annotated.html  annotated_dup.js  auth__controller_8h.html  auth__controller_8h.js  auth__controller_8h__incl.dot  auth__controller_8h_source.html  chat__service_8h.html  chat__service_8h.js  chat__service_8h__dep__incl.dot  chat__service_8h__incl.dot  chat__service_8h_source.html  chat__service__plugin_8h.html  chat__service__plugin_8h.js  chat__service__plugin_8h__dep__incl.dot  chat__service__plugin_8h__incl.dot  chat__service__plugin_8h_source.html  chat__websocket_8h.html  chat__websocket_8h.js  chat__websocket_8h__dep__incl.dot  chat__websocket_8h__incl.dot  chat__websocket_8h_source.html  class_auth_controller-members.html  class_auth_controller.html  class_auth_controller.js  class_auth_controller__inherit__graph.dot  class_auth_controller_a02698c8c090baf34d1f7d70afd192395_cgraph.dot  class_auth_controller_a39ec55171632718dbbeff7570125139d_icgraph.dot  class_auth_controller_a5919bee3d352d6ed545ed0e6f629f4c8_icgraph.dot  class_auth_controller_a9312aa09a7c72f00fe62cc4d22ebb230_icgraph.dot  class_chat_service_plugin-members.html  class_chat_service_plugin.html  class_chat_service_plugin.js  class_chat_service_plugin__inherit__graph.dot  class_chat_web_socket-members.html  class_chat_web_socket.html  class_chat_web_socket.js  class_chat_web_socket__inherit__graph.dot  class_database_plugin-members.html  class_database_plugin.html  (+243 more)
server-doc/html/search/: all_0.js  all_1.js  all_10.js  (+132 more)
server/include/: auth_controller.h  chat_models.h  chat_models.h   chat_notifier.h  chat_service.h  chat_service_plugin.h  chat_websocket.h  chat_ws_controller.h  database_plugin.h  db_wrapper.h  df.h  http_utils.h  log_functions.h  logger.h  logger_plugin.h  mainserv.h  message_man.h  msg_controller.h  ping_controller.h  postgres.h  room_controller.h  room_manager.h  srv.h  tagged.h  tagged_uuid.h  token_generator.h  token_manager.h  token_monitor_plugin.h  token_storage.h  user_controller.h  user_manager.h
server/src/: CMakeLists.txt  CMakePresets.json  abstract_sess.cpp  auth_controller.cpp  chat_models.cpp  chat_notifier.cpp  chat_service.cpp  chat_service_plugin.cpp  chat_websocket.cpp  chat_ws_controller.cpp  chatroom.cpp  chatroomsess.cpp  chatuser.cpp  cli.cpp  clix.cpp  const.cpp  const.h  database_plugin.cpp  db_wrapper.cpp  db_wrapper.h  guardlock.h  http_utils.cpp  loaderserv.conf  logger_plugin.cpp  main.cpp  mainserv.cpp  mainserv_operations.cpp  message_man.h  msg_controller.cpp  ping_controller.cpp  postgres.cpp  postgres.h  room_controller.cpp  room_manager.cpp  server_responce.cpp  server_session.cpp  service.cpp  service.h  service_action_check.cpp  srv.h  (+7 more)
server/tests/: test_postgres.cpp  test_token_manager.cpp
setup/: team_1.irc_chat.json
